--- a/f2.html
+++ b/f2.html
@@ -94,20 +94,37 @@
 
     <!-- Trofeos -->
     <section class="trophies bg-blue-900 text-white p-6 rounded-2xl shadow-lg mt-12">
-      <h2 class="text-2xl font-bold mb-4">🏆 Trofeos Históricos F2</h2>
+      <h2 class="text-2xl font-bold mb-6">🏆 Trofeos Históricos F2</h2>
 
+      <!-- Campeonatos de Pilotos -->
+      <h3 class="text-xl font-semibold mb-2">Pilotos</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4">
+        <li>🏆 T56 - WDC F2 - Diolys Pedroza</li>
+      </ul>
+
+      <!-- Constructores -->
+      <h3 class="text-xl font-semibold mb-2">Constructores</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4">
+        <li>🏆 T56 - Constructores F2 - Cadillac</li>
+        <li>🏆 T67 - Constructores F2 - Alpine</li>
+      </ul>
+
+      <!-- Copas Internacionales -->
+      <h3 class="text-xl font-semibold mb-2">Copas Internacionales</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4">
+        <li>🏆 T47 - Copa Pistón F2 - Carlos Vázquez</li>
+        <li>🏆 T49 - Copa Pistón F2 - Dan Viturro</li>
+        <li>🏆 T56 - Copa Pistón F2 - Diolys Pedroza</li>
+        <li>🏆 T57 - Copa Pistón F2 - Luis Rentería</li>
+      </ul>
+
+      <!-- Conference League -->
+      <h3 class="text-xl font-semibold mb-2">Conference League</h3>
       <ul class="list-disc list-inside space-y-1">
-        <li>T47 - Copa Pistón F2 - Carlos Vázquez</li>
-        <li>T49 - Copa Pistón F2 - Dan Viturro</li>
-        <li>T56 - Conference League F2 - Cadillac Andretti</li>
-        <li>T56 - Copa Pistón F2 - Diolys Pedroza</li>
-        <li>T56 - Constructores F2 - Cadillac</li>
-        <li>T56 - WDC F2 - Diolys Pedroza</li>
-        <li>T57 - Conference League F2 - Andretti Cadillac</li>
-        <li>T57 - Copa Pistón F2 - Luis Rentería</li>
-        <li>T58 - Conference League F2 - Andretti</li>
-        <li>T62 - Conference League F2 - Citroën Alpine</li>
-        <li>T67 - Constructores F2 - Alpine</li>
+        <li>🏆 T56 - Conference League F2 - Cadillac Andretti</li>
+        <li>🏆 T57 - Conference League F2 - Andretti Cadillac</li>
+        <li>🏆 T58 - Conference League F2 - Andretti</li>
+        <li>🏆 T62 - Conference League F2 - Citroën Alpine</li>
       </ul>
     </section>
   </main>
