--- a/f2.html
+++ b/f2.html
@@ -99,17 +99,16 @@
       <!-- Campeonatos de Pilotos -->
       <h3 class="text-xl font-semibold mb-2">Pilotos</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T56 - WDC F2 - Diolys Pedroza</li>
+        <li>🏆 1 Campeonato Diolys Pedroza</li>
       </ul>
 
       <!-- Constructores -->
       <h3 class="text-xl font-semibold mb-2">Constructores</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
-        <li>🏆 T56 - Constructores F2 - Cadillac</li>
-        <li>🏆 T67 - Constructores F2 - Alpine</li>
+        <li>🏆 2 Campeonatos - Alpine</li>
       </ul>
 
-      <!-- Copas Internacionales -->
+      <!-- Copas Individuales -->
       <h3 class="text-xl font-semibold mb-2">Copas Internacionales</h3>
       <ul class="list-disc list-inside space-y-1 mb-4">
         <li>🏆 T47 - Copa Pistón F2 - Carlos Vázquez</li>
@@ -121,10 +120,7 @@
       <!-- Conference League -->
       <h3 class="text-xl font-semibold mb-2">Conference League</h3>
       <ul class="list-disc list-inside space-y-1">
-        <li>🏆 T56 - Conference League F2 - Cadillac Andretti</li>
-        <li>🏆 T57 - Conference League F2 - Andretti Cadillac</li>
-        <li>🏆 T58 - Conference League F2 - Andretti</li>
-        <li>🏆 T62 - Conference League F2 - Citroën Alpine</li>
+        <li>🏆 4 - Conference League T56 T57 T58 T62</li>
       </ul>
     </section>
   </main>
