--- a/f3.html
+++ b/f3.html
@@ -8,25 +8,44 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #1c1c1c;
+      background-color: #2b2b2b; /* gris más claro */
       color: white;
     }
 
     header {
-      background-color: #2e2e2e;
+      background-color: #3a3a3a;
       padding: 15px;
       text-align: center;
     }
 
     header h1 {
       margin: 0;
+      color: #e63946; /* rojo */
+    }
+
+    nav {
+      background-color: #222;
+      padding: 10px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
       color: #e63946;
     }
 
     .resumen {
       padding: 20px;
       text-align: center;
-      background-color: #333;
+      background-color: #3a3a3a;
       color: white;
     }
 
@@ -48,16 +67,17 @@
     }
 
     .piloto-card {
-      background-color: #2e2e2e;
+      background-color: #3a3a3a;
       border-radius: 12px;
       padding: 15px;
       width: 220px;
       text-align: center;
       transition: transform 0.3s;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
     }
 
     .piloto-card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-8px);
     }
 
     .piloto-card img {
@@ -65,6 +85,14 @@
       height: 220px;
       object-fit: cover;
       border-radius: 10px;
+    }
+
+    .bandera {
+      width: 24px;
+      height: 16px;
+      vertical-align: middle;
+      margin-right: 6px;
+      border: 1px solid #fff;
     }
 
     .piloto-card h3 {
@@ -78,7 +106,7 @@
     }
 
     .trofeos {
-      background-color: #333;
+      background-color: #3a3a3a;
       padding: 40px 20px;
     }
 
@@ -107,6 +135,15 @@
     <h1>Mitsubishi - F3</h1>
   </header>
 
+  <nav>
+    <a href="#">Inicio</a>
+    <a href="#">F1</a>
+    <a href="#">F2</a>
+    <a href="#">F3</a>
+    <a href="#">F4</a>
+    <a href="#">F5</a>
+  </nav>
+
   <section class="resumen">
     <p>El equipo Mitsubishi, múltiple campeón y un histórico en F3, formador de grandes talentos y campeones.</p>
   </section>
@@ -116,22 +153,22 @@
     <div class="pilotos-container">
       <div class="piloto-card">
         <img src="https://i.imgur.com/oHAIZNs.jpeg" alt="Anderson Leiva">
-        <h3>🇸🇻 Anderson Leiva</h3>
+        <h3><img class="bandera" src="https://flagcdn.com/w20/sv.png" alt="SV"> Anderson Leiva</h3>
         <p>El Salvador</p>
       </div>
       <div class="piloto-card">
         <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="FranMandoOr">
-        <h3>🇲🇽 FranMandoOr</h3>
+        <h3><img class="bandera" src="https://flagcdn.com/w20/mx.png" alt="MX"> FranMandoOr</h3>
         <p>México</p>
       </div>
       <div class="piloto-card">
         <img src="https://i.imgur.com/uNdRAHj.jpeg" alt="Leandro Tabares">
-        <h3>🇨🇴 Leandro Tabares</h3>
+        <h3><img class="bandera" src="https://flagcdn.com/w20/co.png" alt="CO"> Leandro Tabares</h3>
         <p>Colombia</p>
       </div>
       <div class="piloto-card">
         <img src="https://i.imgur.com/cifqFkx.jpeg" alt="Renato Alcántara">
-        <h3>🇨🇴 Renato Alcántara</h3>
+        <h3><img class="bandera" src="https://flagcdn.com/w20/co.png" alt="CO"> Renato Alcántara</h3>
         <p>Colombia</p>
       </div>
     </div>
