--- a/f3.html
+++ b/f3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mitsubishi F3</title>
+  <title>Alpine Mitsubishi F3</title>
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- ScrollReveal -->
@@ -57,7 +57,7 @@
 
     <!-- Resumen del equipo -->
     <p class="text-lg mb-10 leading-relaxed text-gray-200">
-      El equipo <b>Mitsubishi</b>, múltiple campeón y un histórico en F3, formador de grandes talentos y campeones.
+      El equipo <b>Alpine Mitsubishi</b>, múltiple campeón y un histórico en F3, formador de grandes talentos y campeones.
     </p>
 
     <!-- Pilotos -->
@@ -140,13 +140,13 @@
         <li>🏆 T58 - Golden League F3 - Mitsubishi</li>
         <li>🏆 T59 - Golden League F3 - Mitsubishi</li>
         <li>🏆 T60 - Golden League F3 - Mitsubishi</li>
-        <li>🏆 T66 - Golden League F3 - Cristian Fernández</li>
       </ul>
 
       <!-- Rookie Cup -->
       <h3 class="text-xl font-semibold mb-2 text-red-300">Rookie Cup</h3>
       <ul class="list-disc list-inside space-y-1 text-gray-100">
         <li>🏆 T55 - Rookie Cup F3 - Jesse Valim</li>
+        <li>🏆 T66 - Rookie Cup F3 - Cristian Fernández</li>
         <li>🏆 T57 - Rookie Cup F3 - Gastón Juno Ades</li>
       </ul>
     </section>
@@ -154,7 +154,7 @@
 
   <!-- Footer -->
   <footer class="bg-gray-700 text-white p-4 text-center mt-12">
-    <p>© 2025 Mitsubishi F3 - Alpine Academy</p>
+    <p>© 2025 Alpine Mitsubishi F3 - Alpine Academy</p>
   </footer>
 
   <script>
