--- a/f3.html
+++ b/f3.html
@@ -52,7 +52,7 @@
     <!-- Logo + Título -->
     <div class="flex items-center space-x-4 mb-8">
       <img src="https://i.imgur.com/FAFPTXN.jpeg" alt="Logo F3" class="w-20 h-20 rounded-lg shadow-lg">
-      <h2 class="text-3xl font-extrabold text-red-500">Mitsubishi F3</h2>
+      <h2 class="text-3xl font-extrabold text-red-500">Alpine Mitsubishi F3</h2>
     </div>
 
     <!-- Resumen del equipo -->
