--- a/f4.html
+++ b/f4.html
@@ -1,115 +1,172 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>F4 - BWT Academy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Alpine BWT F4</title>
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
+  <!-- ScrollReveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
 </head>
-<body class="bg-gradient-to-b from-blue-900 to-pink-400 min-h-screen text-white">
+<body class="bg-blue-800 text-gray-100 font-sans"> <!-- Fondo azul BWT -->
 
-  <!-- Menú -->
-  <nav class="bg-pink-500 bg-opacity-90 p-4 flex justify-between items-center shadow-lg">
-    <h1 class="text-2xl font-bold">F4 - BWT Academy</h1>
-    <ul class="flex space-x-6 text-lg">
-      <li><a href="#pilotos" class="hover:text-blue-200">Pilotos</a></li>
-      <li><a href="#trofeos" class="hover:text-blue-200">Trofeos</a></li>
-    </ul>
-  </nav>
+  <!-- Header / Menú superior (misma estructura que F2/F3) -->
+  <header class="bg-pink-600 text-white p-4 flex justify-between items-center">
+    <h1 class="text-lg font-bold">Alpine Academy</h1>
+    <nav>
+      <ul class="hidden md:flex space-x-6">
+        <li><a href="index.html" class="hover:text-blue-200">Inicio</a></li>
+        <li><a href="f1.html" class="hover:text-blue-200">F1</a></li>
+        <li><a href="f2.html" class="hover:text-blue-200">F2</a></li>
+        <li><a href="f3.html" class="hover:text-blue-200">F3</a></li>
+        <li><a href="f4.html" class="hover:text-blue-200">F4</a></li>
+        <li><a href="f5.html" class="hover:text-blue-200">F5</a></li>
+        <li><a href="k6.html" class="hover:text-blue-200">K6</a></li>
+      </ul>
+      <!-- Hamburguesa móvil -->
+      <div class="md:hidden">
+        <button id="menu-btn" class="focus:outline-none" aria-label="Abrir menú">
+          <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"/>
+          </svg>
+        </button>
+      </div>
+    </nav>
+  </header>
 
-  <!-- Resumen del equipo -->
-  <section class="p-8 text-center">
-    <p class="text-xl max-w-3xl mx-auto">
-      El campeonato de F4 ha servido como base de formación para grandes talentos, 
-      respaldado por <span class="font-bold">BWT</span> en su rol de patrocinador principal, 
-      combinando desarrollo y competitividad.
+  <!-- Menú móvil (mismo comportamiento que F2/F3, se cierra al hacer clic) -->
+  <div id="menu" class="hidden md:hidden bg-pink-600 text-white p-4 space-y-3">
+    <a href="index.html" class="block">Inicio</a>
+    <a href="f1.html" class="block">F1</a>
+    <a href="f2.html" class="block">F2</a>
+    <a href="f3.html" class="block">F3</a>
+    <a href="f4.html" class="block">F4</a>
+    <a href="f5.html" class="block">F5</a>
+    <a href="k6.html" class="block">K6</a>
+  </div>
+
+  <!-- Contenido -->
+  <main class="max-w-6xl mx-auto p-6">
+    <!-- Logo + Título (idéntico layout a F2/F3) -->
+    <div class="flex items-center space-x-4 mb-8">
+      <img src="https://i.imgur.com/mcIjDcB.jpeg" alt="Logo F4 BWT" class="w-20 h-20 rounded-lg shadow-lg">
+      <h2 class="text-3xl font-extrabold text-pink-300">Alpine BWT F4</h2>
+    </div>
+
+    <!-- Resumen del equipo -->
+    <p class="text-lg mb-10 leading-relaxed text-blue-100">
+      El campeonato de <b>F4</b> es la base de formación de la Alpine Academy. Con el respaldo de <b>BWT</b>,
+      esta categoría combina desarrollo y competitividad para preparar a nuestros talentos antes del salto a F3/F2/F1.
     </p>
-  </section>
 
-  <!-- Pilotos -->
-  <section id="pilotos" class="p-8">
-    <h2 class="text-3xl font-bold text-center mb-6">👨‍🚀 Pilotos Titulares</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-      
+    <!-- Pilotos -->
+    <h2 class="text-2xl font-bold mb-6 text-pink-300">👨‍✈️ Pilotos Titulares</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
       <!-- Matías Moreno -->
-      <div class="bg-blue-800 rounded-2xl shadow-lg p-4 transform transition hover:scale-105">
-        <img src="https://i.imgur.com/Nsw57er.jpeg" alt="Matías Moreno" class="rounded-xl w-full h-56 object-cover mb-4">
-        <h3 class="text-xl font-semibold">Matías Moreno</h3>
-        <p class="text-sm flex items-center">
-          <img src="https://flagcdn.com/w20/ar.png" class="inline w-6 h-4 mr-2"> Argentina
+      <div class="bg-blue-700 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://dummyimage.com/400x400/1e3a8a/ffffff&text=Mat%C3%ADas+Moreno" alt="Matías Moreno"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Matías Moreno</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/ar.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="AR">
+          Argentina
         </p>
       </div>
 
       <!-- Lautaro Carballo -->
-      <div class="bg-blue-800 rounded-2xl shadow-lg p-4 transform transition hover:scale-105">
-        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Lautaro Carballo" class="rounded-xl w-full h-56 object-cover mb-4">
-        <h3 class="text-xl font-semibold">Lautaro Carballo</h3>
-        <p class="text-sm flex items-center">
-          <img src="https://flagcdn.com/w20/ar.png" class="inline w-6 h-4 mr-2"> Argentina
+      <div class="bg-blue-700 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://dummyimage.com/400x400/1e3a8a/ffffff&text=Lautaro+Carballo" alt="Lautaro Carballo"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Lautaro Carballo</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/ar.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="AR">
+          Argentina
         </p>
       </div>
 
       <!-- Martín Elías -->
-      <div class="bg-blue-800 rounded-2xl shadow-lg p-4 transform transition hover:scale-105">
-        <img src="https://i.imgur.com/uNdRAHj.jpeg" alt="Martín Elías" class="rounded-xl w-full h-56 object-cover mb-4">
-        <h3 class="text-xl font-semibold">Martín Elías</h3>
-        <p class="text-sm flex items-center">
-          <img src="https://flagcdn.com/w20/co.png" class="inline w-6 h-4 mr-2"> Colombia
+      <div class="bg-blue-700 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://dummyimage.com/400x400/1e3a8a/ffffff&text=Mart%C3%ADn+El%C3%ADas" alt="Martín Elías"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Martín Elías</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/co.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="CO">
+          Colombia
         </p>
       </div>
 
       <!-- Alex Núñez -->
-      <div class="bg-blue-800 rounded-2xl shadow-lg p-4 transform transition hover:scale-105">
-        <img src="https://i.imgur.com/cifqFkx.jpeg" alt="Alex Núñez" class="rounded-xl w-full h-56 object-cover mb-4">
-        <h3 class="text-xl font-semibold">Alex Núñez</h3>
-        <p class="text-sm flex items-center">
-          <img src="https://flagcdn.com/w20/ve.png" class="inline w-6 h-4 mr-2"> Venezuela
+      <div class="bg-blue-700 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://dummyimage.com/400x400/1e3a8a/ffffff&text=Alex+N%C3%BA%C3%B1ez" alt="Alex Núñez"
+             class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold text-lg">Alex Núñez</h3>
+        <p class="text-sm">
+          <img src="https://flagcdn.com/w20/ve.png" class="inline w-5 h-3 mr-1 align-[2px]" alt="VE">
+          Venezuela
         </p>
       </div>
-
     </div>
-  </section>
 
-  <!-- Trofeos -->
-  <section id="trofeos" class="p-8">
-    <h2 class="text-3xl font-bold text-center mb-6">🏆 Trofeos Históricos F4</h2>
-    <div class="bg-pink-600 rounded-2xl shadow-lg p-6 max-w-3xl mx-auto">
+    <!-- Trofeos (mismo bloque y estilo que F2/F3) -->
+    <section class="trophies bg-pink-600 text-white p-6 rounded-2xl shadow-lg mt-12">
+      <h2 class="text-2xl font-bold mb-6 text-blue-100">🏆 Trofeos Históricos F4</h2>
 
-      <h3 class="text-2xl font-semibold mb-2">Pilotos</h3>
-      <ul class="list-disc ml-6 mb-4">
+      <!-- Pilotos -->
+      <h3 class="text-xl font-semibold mb-2 text-blue-50">Pilotos</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4 text-white">
         <li>🏆 T49 – Primer Campeón: Christian Horny</li>
         <li>🏆 T51 – WDC: Antonio Villalba</li>
         <li>🏆 T59 – WDC: Marco Caracciolo</li>
         <li>🏆 T61 – WDC: Arturo Yerena</li>
       </ul>
 
-      <h3 class="text-2xl font-semibold mb-2">Constructores</h3>
-      <ul class="list-disc ml-6 mb-4">
+      <!-- Constructores -->
+      <h3 class="text-xl font-semibold mb-2 text-blue-50">Constructores</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4 text-white">
         <li>🏆 T49 – Citroën Academy</li>
         <li>🏆 T58 – Alpine Academy</li>
         <li>🏆 T66 – Alpine</li>
       </ul>
 
-      <h3 class="text-2xl font-semibold mb-2">Copas Internacionales</h3>
-      <ul class="list-disc ml-6 mb-4">
+      <!-- Copas Internacionales -->
+      <h3 class="text-xl font-semibold mb-2 text-blue-50">Copas Internacionales</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4 text-white">
         <li>🏆 T51 – Real Cup: Antonio Villalba</li>
         <li>🏆 T63 – Real Cup: Lucas Mazacotte</li>
       </ul>
 
-      <h3 class="text-2xl font-semibold mb-2">Copas Promesas / Juveniles</h3>
-      <ul class="list-disc ml-6 mb-4">
+      <!-- Copas Promesas / Juveniles -->
+      <h3 class="text-xl font-semibold mb-2 text-blue-50">Copas Promesas / Juveniles</h3>
+      <ul class="list-disc list-inside space-y-1 mb-4 text-white">
         <li>🏆 T61 – Copa Promises: Diego Redondo</li>
         <li>🏆 T62 – Copa Promises: Iván Leiva</li>
       </ul>
 
-      <h3 class="text-2xl font-semibold mb-2">Otros logros</h3>
-      <ul class="list-disc ml-6">
+      <!-- Otros logros -->
+      <h3 class="text-xl font-semibold mb-2 text-blue-50">Otros logros</h3>
+      <ul class="list-disc list-inside space-y-1 text-white">
         <li>🥈 T61 – Silver League: Alpine Academy</li>
       </ul>
+    </section>
+  </main>
 
-    </div>
-  </section>
+  <!-- Footer (mismo patrón) -->
+  <footer class="bg-pink-600 text-white p-4 text-center mt-12">
+    <p>© 2025 Alpine BWT F4 - Alpine Academy</p>
+  </footer>
 
+  <script>
+    // Menú hamburguesa (igual que F2/F3: toggle + cerrar al pulsar link)
+    const btn = document.getElementById('menu-btn');
+    const menu = document.getElementById('menu');
+    btn.addEventListener('click', () => menu.classList.toggle('hidden'));
+    menu.querySelectorAll('a').forEach(a => a.addEventListener('click', () => menu.classList.add('hidden')));
+
+    // Animaciones ScrollReveal (idénticas a F2/F3)
+    ScrollReveal().reveal('.trophies', { delay: 200, distance: '50px', origin: 'bottom' });
+    ScrollReveal().reveal('.grid > div', { interval: 200, distance: '50px', origin: 'bottom' });
+  </script>
 </body>
 </html>
